# drf-exception-dispatcher

./: .gitignore  .importlinter  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml  mispell.yml  release.yml  test.yml
exception_dispatcher/: handler.py  handlers.py  parsers.py  types.py
exception_dispatcher/dispatchers/: __init__.py  django.py  main.py  rest_framework.py
tests/: conftest.py  settings.py  test_handler.py  test_handlers.py  test_parsers.py
tests/test_dispatchers/: test_django.py  test_main.py
tests/test_dispatchers/test_rest_framework/: test_dispatcher_handlers.py  test_handlers.py  test_parser_getter.py
