[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "drf-exception-dispatcher"
version = "0.1.0"
packages = [
    { include = "exception_dispatcher" },
]
description = "django-rest-framework exception handler build with functools.singledispatch"
authors = ["Łukasz Skarżyński <me@skarzi.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/skarzi/drf-exception-dispatcher"
keywords = [
    "django",
    "django-exceptions",
    "django-rest-framework",
    "rest-framework-exceptions",
    "exceptions",
    "exception-handler",
    "exception-dispatcher",
    "exception-parser",
    "singledispatch",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet :: WWW/HTTP",
  "Framework :: Django",
]

[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]
# type hinting
mypy = "^0.920"
django-stubs = "^1.7.0"
djangorestframework-stubs = "^1.4.0"

# linters
# python
flake8-pytest-style = "^1.5.1"
flake8-todos = "^0.1.5"
flake8-typing-imports = "^1.11.0"
import-linter = "^1.2.6"
wemake-python-styleguide = "^0.15.3"
yesqa = "^1.3.0"
# other
safety = "^1.10.3"

# tests
pytest = "^6.2.2"
pytest-cov = "^3.0.0"
pytest-deadfixtures = "^2.2.1"
pytest-mock = "^3.5.1"
pytest-randomly = "^3.10.2"
pytest-timeout = "^2.0.1"
